// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaptureForm Should Render 1`] = `
<div>
  <h2
    className="h2-m2oto9-0 detail_view__Title-inrqp5-1 ibbisR"
  >
    Timeline
  </h2>
  <div
    className="detail_view__ContentWrapper-inrqp5-0 iyMXGu"
    style={Object {}}
  >
    <table>
      <tbody>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <svg
              height={20}
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <circle
                  cx="10"
                  cy="10"
                  id="a"
                  r="8.75"
                />
                <path
                  d="M9.3 5h1.406v6.875H9.3V5zm.7 10.625a.937.937 0 1 1 0-1.875.937.937 0 0 1 0 1.875z"
                  id="b"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
              >
                <use
                  fill="#f7981c"
                  xlinkHref="#a"
                />
                <use
                  fill="#FFF"
                  xlinkHref="#b"
                />
              </g>
            </svg>
          </td>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <b>
              Payment
               
              <span
                style={
                  Object {
                    "textTransform": "lowercase",
                  }
                }
              >
                refunded
              </span>
                
            </b>
            <span
              className="transaction_timeline__DateCmp-sc-1qjudet-1 eOlxOK"
            >
              Jun 26, 2:49 PM
            </span>
          </td>
        </tr>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          />
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <b>
              Payment
               
              <span
                style={
                  Object {
                    "textTransform": "lowercase",
                  }
                }
              >
                Authorised
              </span>
                
            </b>
            <span
              className="transaction_timeline__DateCmp-sc-1qjudet-1 eOlxOK"
            >
              Jun 21, 5:18 PM
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`CaptureForm Should Render preauth explaination 1`] = `
<div>
  <h2
    className="h2-m2oto9-0 detail_view__Title-inrqp5-1 ibbisR"
  >
    Timeline
  </h2>
  <div
    className="detail_view__ContentWrapper-inrqp5-0 iyMXGu"
    style={Object {}}
  >
    <table>
      <tbody>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <svg
              height={20}
              viewBox="0 0 20 20"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <circle
                  cx="10"
                  cy="10"
                  id="a"
                  r="8.75"
                />
                <path
                  d="M9.3 5h1.406v6.875H9.3V5zm.7 10.625a.937.937 0 1 1 0-1.875.937.937 0 0 1 0 1.875z"
                  id="b"
                />
              </defs>
              <g
                fill="none"
                fillRule="evenodd"
              >
                <use
                  fill="#00be41"
                  xlinkHref="#a"
                />
                <use
                  fill="#FFF"
                  xlinkHref="#b"
                />
              </g>
            </svg>
          </td>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <b>
              Payment
               
              <span
                style={
                  Object {
                    "textTransform": "lowercase",
                  }
                }
              >
                Pre-Authorised
              </span>
              , but not yet captured
                
            </b>
            <span
              className="transaction_timeline__DateCmp-sc-1qjudet-1 eOlxOK"
            >
              Jun 26, 2:49 PM
            </span>
          </td>
        </tr>
        <tr>
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          />
          <td
            className="transaction_timeline__TimeActionItem-sc-1qjudet-0 fIFaIv"
          >
            <b>
              Payment
               
              <span
                style={
                  Object {
                    "textTransform": "lowercase",
                  }
                }
              >
                Failed
              </span>
                
            </b>
            <span
              className="transaction_timeline__DateCmp-sc-1qjudet-1 eOlxOK"
            >
              Jun 21, 5:18 PM
            </span>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
